--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 					AFFIDAVIT <a href="http://barondavidward.com">BDW.com</a></p>
 					<ul class="actions">
 						<li><a href="https://justpaste.it/img/434796cb95a25e03f3cb8081ed08f8ec.jpg" class="button primary icon solid fa-download">PUBLIC NOTICE</a></li>
-						<li><a href="https://justpaste.it/img/434796cb95a25e03f3cb8081ed08f8ec.jpg" class="button icon solid fa-chevron-down scrolly">Affidavit and Securitized Lien</a></li>
+						<li><a href="https://justpaste.it/img/21a223126fc726f1b688f68dfd675e54.jpg" class="button icon solid fa-chevron-down scrolly">Affidavit and Securitized Lien</a></li>
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
 			</header>
-			<iframe src="https://justpaste.it/6mzjl/pdf" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="1100px" allowfullscreen></iframe>				</p>
+			<iframe src="https://justpaste.it/478nb/pdf" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="1100px" allowfullscreen></iframe>				</p>
 										<p hidden>
-			<iframe src="https://justpaste.it/6mzjl/pdf" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="1100px" allowfullscreen></iframe>				</p>
+			<iframe src="https://justpaste.it/cpcf4/pdf" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="1100px" allowfullscreen></iframe>				</p>
 										</p>
 
 		<!-- One -->
